--- a/style.css
+++ b/style.css
@@ -68,8 +68,7 @@ h2,
 h3,
 h4 {
   line-height: 1;
-  margin-block-start: var(--space-m);
-  margin-block-end: var(--space-s);
+  padding-block: var(--space-m) var(--space-s);
 }
 
 svg {
@@ -81,6 +80,7 @@ h1 {
   font-size: var(--step-4);
   line-height: 1;
   color: inherit;
+  padding-block-start: var(--space-l);
 }
 
 h2, h3, h4 {
@@ -104,7 +104,7 @@ h4 {
 
 p {
   max-width: 60ch;
-  padding-block: var(--space-2xs);
+  padding-block: var(--space-3xs);
 }
 
 a {
@@ -129,4 +129,22 @@ a:hover, a:focus {
   a:focus {
     text-underline-offset: 0.4em;
   }
+}
+
+.skip-link {
+  width: fit-content;
+  position: absolute;
+  inset-inline-start: 0;
+  inset-block-start: 0;
+  transform: translateY(-100%);
+  transition: transform 500ms ease;  
+}
+
+.skip-link:focus {
+  transform: translateY(0%);
+}
+
+.container {
+  display: grid;
+  grid-gap: var(--space-xs);
 }
